0.10.1:
* Add `GitTypes.S.mem` to check if an object exists in the store

0.10.0: (2014-01-14)
* Support for in-memory stores
* Add `ogit cat-file`
* Add `ogit ls-remote`
* Add `ogit fetch`
* Add `ogit clone`
* Switch non-blocking IO using Lwt

0.9.0: (2014-01-04)
* Initial release